[tool.poetry]
name = "sst"
version = "0.1.0"
description = "service for speech-to-text translate"
authors = ["ch4t5ky <mr_a953@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faster-whisper = "^1.0.1"
pydub = "^0.25.1"
numpy = "^1.26.4"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
